--- a/index.html
+++ b/index.html
@@ -1,50 +1,120 @@
-<!DOCTYPE html><html lang="it"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><meta name="robots" content="noindex, nofollow"><script id="_wau1zx">var _wau = _wau || []; _wau.push(["small", "guillo", "1zx"]);</script><script async src="//waust.at/s.js"></script><meta content="https://i.postimg.cc/KjLgKfw8/csazx.png" property="og:image"><meta name="referrer" content="no-referrer"><meta http-equiv="X-UA-Compatible" content="IE=edge"><title>&#70;&#111;&#116;&#111;&#32;&#100;&#105;&#115;&#99;&#114;&#101;&#116;&#101;</title><style>
-@import url("https://fonts.googleapis.com/css?family=Montserrat&subset=latin-ext");
-*{margin:0;padding:0;box-sizing:border-box}
-html{font-size:62.5%}
-body,html{width:100%;height:100%;overflow:hidden}
-body{font-family:Montserrat,Arial,sans-serif;background:#000}
-.main{position:relative;width:100%;height:100%;z-index:1}
-.videobgbox{position:fixed;inset:0;z-index:0}
-.videobgbox:after{content:"";position:absolute;inset:0;background:rgba(0,0,0,0.5);background-image:linear-gradient(rgba(255,255,255,0.05) 1px,transparent 1px),linear-gradient(90deg,rgba(255,255,255,0.05) 1px,transparent 1px);background-size:3px 3px;z-index:1}
-video{width:100%;height:100%;object-fit:cover;filter:blur(8px)}
-.stepbox{position:relative;z-index:10;height:100%;display:flex;align-items:center;justify-content:center}
-.step{max-width:450px;width:90%;padding:3rem;color:#fff;text-align:center;display:none;background:rgba(0,0,0,0.2);border-radius:15px}
-.step:first-child{display:block}
-h1{font-size:3.5rem;margin-bottom:2rem;color:#ffff00;text-transform:uppercase;text-shadow:2px 2px 4px rgba(0,0,0,0.8)}
-.texto-encuesta{font-size:1.8rem;line-height:1.4;margin-bottom:2.5rem;display:block;text-shadow:1px 1px 2px #000}
-.btnbox{display:flex;gap:15px;justify-content:center}
-.btn{padding:1.5rem 3rem;font-size:1.6rem;text-transform:uppercase;font-weight:bold;text-decoration:none;border-radius:50px;transition:0.3s;cursor:pointer;border:none;min-width:140px;display:inline-block}
-.btn--primary{background:linear-gradient(270deg,#ff0000,#c154c1);color:#fff;box-shadow:0 4px 15px rgba(226,16,16,0.4)}
-.btn--accent{background:#555;color:#fff}
-.progress{position:fixed;bottom:6rem;left:50%;transform:translateX(-50%);width:200px;height:6px;background:rgba(255,255,255,0.2);border-radius:10px;overflow:hidden;z-index:15}
-.bar{width:33%;height:100%;background:linear-gradient(90deg,#1ee8cc,#19a3e0);transition:0.5s}
-.footer-legal{position:fixed;bottom:1rem;width:100%;text-align:center;font-size:1.1rem;color:rgba(255,255,255,0.5);z-index:20}
-.footer-legal a{color:rgba(255,255,255,0.6);text-decoration:none;margin:0 8px;font-weight:bold}
-.modal-legal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.95);z-index:1000;padding:20px;color:#ccc;overflow-y:auto}
-.modal-content{max-width:600px;margin:40px auto;font-size:1.4rem;line-height:1.6;text-align:left;background:#111;padding:30px;border-radius:10px;border:1px solid #333}
-.close-modal{float:right;font-size:30px;cursor:pointer;color:#fff;line-height:20px}</style></head><body><div class="main"><div class="videobgbox"><video autoplay muted loop playsinline><source src="https://cdn-dimi.akamaized.net/landings/288193/1714145726/images/video-5.mp4" type="video/mp4"></video></div><div class="stepbox"><div class="step" id="s1"><h1>&#65;&#116;&#116;&#101;&#110;&#122;&#105;&#111;&#110;&#101;&#33;</h1><span class="texto-encuesta">&#83;&#105;&#97;&#109;&#111;&#32;&#117;&#110;&#32;&#103;&#114;&#117;&#112;&#112;&#111;&#32;&#100;&#105;&#32;&#109;&#97;&#100;&#114;&#101;&#115;&#32;&#115;&#105;&#110;&#103;&#108;&#101;&#32;&#100;&#97;&#105;&#32;&#51;&#48;&#32;&#97;&#105;&#32;&#53;&#48;&#32;&#97;&#110;&#110;&#105;&#32;&#105;&#110;&#32;&#99;&#101;&#114;&#99;&#97;&#32;&#100;&#105;&#32;&#117;&#110;&#97;&#32;&#114;&#101;&#108;&#97;&#122;&#105;&#111;&#110;&#101;&#46;&#32;&#83;&#101;&#32;&#115;&#101;&#105;&#32;&#109;&#97;&#103;&#103;&#105;&#111;&#114;&#101;&#110;&#110;&#101;&#44;&#32;&#99;&#108;&#105;&#99;&#99;&#97;&#32;&#69;&#78;&#84;&#82;&#65;&#46;</span><div class="btnbox"><a class="btn btn--primary next" href="#">&#69;&#110;&#116;&#114;&#97;</a></div></div><div class="step" id="s2"><span class="texto-encuesta">&#83;&#101;&#105;&#32;&#97;&#32;&#117;&#110;&#32;&#112;&#97;&#115;&#115;&#111;&#32;&#100;&#97;&#108;&#32;&#114;&#105;&#109;&#101;&#118;&#101;&#114;&#101;&#32;&#105;&#108;&#32;&#109;&#105;&#111;&#32;&#114;&#101;&#103;&#97;&#108;&#111;&#46;&#32;&#84;&#105;&#32;&#112;&#105;&#97;&#99;&#99;&#105;&#111;&#110;&#111;&#32;&#108;&#101;&#32;&#100;&#111;&#110;&#110;&#101;&#32;&#111;&#108;&#116;&#114;&#101;&#32;&#105;&#32;&#51;&#48;&#32;&#97;&#110;&#110;&#105;&#63;</span><div class="btnbox"><a class="btn btn--accent next" href="#">&#78;&#111;</a><a class="btn btn--primary next" href="#">&#83;&#236;</a></div></div><div class="step" id="s3"><h1>&#50;&#52;&#32;&#111;&#114;&#101;&#33;</h1><span class="texto-encuesta">&#65;&#99;&#99;&#101;&#116;&#116;&#105;&#32;&#100;&#105;&#32;&#114;&#105;&#115;&#112;&#101;&#116;&#116;&#97;&#114;&#101;&#32;&#108;&#101;&#32;&#112;&#114;&#105;&#118;&#97;&#99;&#121;&#32;&#100;&#101;&#105;&#32;&#110;&#111;&#115;&#116;&#114;&#105;&#32;&#109;&#101;&#109;&#98;&#114;&#105;&#63;&#32;&#78;&#111;&#110;&#32;&#100;&#105;&#102;&#102;&#111;&#110;&#100;&#101;&#114;&#101;&#32;&#118;&#111;&#99;&#105;&#46;</span><div class="btnbox"><a class="btn btn--primary" href="https://aoarlv.swetllove.com/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2179272&s3=Guillo">&#65;&#99;&#101;&#116;&#116;&#111;</a></div></div></div><div class="progress"><div class="bar" id="pbar"></div></div><div class="footer-legal"><a href="#" data-type="p">&#80;&#114;&#105;&#118;&#97;&#99;&#121;</a> | <a href="#" data-type="c">&#84;&#101;&#114;&#109;&#105;&#110;&#105;</a> | <a href="#" data-type="k">&#67;&#111;&#111;&#102;&#105;&#101;&#115;</a><br>© 2025</div><div id="legalModal" class="modal-legal"><div class="modal-content"><span class="close-modal">&times;</span><div id="legalText"></div></div></div><script src="https://code.jquery.com/jquery-2.2.4.min.js"></script><script>
-$(document).ready(function(){
-    var steps=$('.step'), cur=0;
-    $('.next').click(function(e){
-        e.preventDefault(); $(steps[cur]).hide(); cur++;
-        if(cur<steps.length){
-            $(steps[cur]).fadeIn();
-            $('#pbar').css('width',((cur+1)/steps.length)*100+'%');
-        }
-    });
-    const leg={
-        p:"<h2>&#80;&#114;&#105;&#118;&#97;&#99;&#121;</h2><p>&#73;&#32;&#116;&#117;&#111;&#105;&#32;&#100;&#97;&#116;&#105;&#32;&#115;&#111;&#110;&#111;&#32;&#97;&#108;&#32;&#115;&#105;&#99;&#117;&#114;&#111;&#32;&#99;&#111;&#110;&#32;&#110;&#111;&#105;&#46;</p>",
-        c:"<h2>&#84;&#101;&#114;&#109;&#105;&#110;&#105;</h2><p>&#69;&#110;&#116;&#114;&#97;&#110;&#100;&#111;&#44;&#32;&#99;&#111;&#110;&#102;&#101;&#114;&#109;&#105;&#32;&#100;&#105;&#32;&#97;&#118;&#101;&#114;&#101;&#32;&#112;&#105;&#249;&#32;&#100;&#105;&#32;&#49;&#56;&#32;&#97;&#110;&#110;&#105;&#46;</p>",
-        k:"<h2>&#67;&#111;&#111;&#102;&#105;&#101;&#115;</h2><p>&#81;&#117;&#101;&#115;&#116;&#111;&#32;&#115;&#105;&#116;&#111;&#32;&#117;&#116;&#105;&#108;&#105;&#122;&#122;&#97;&#32;&#99;&#111;&#111;&#102;&#105;&#101;&#32;&#112;&#101;&#114;&#32;&#109;&#105;&#103;&#108;&#105;&#111;&#114;&#97;&#114;&#101;&#32;&#108;&#39;&#101;&#115;&#112;&#101;&#114;&#105;&#101;&#110;&#122;&#97;&#46;</p>"
-    };
-    $('.footer-legal a').click(function(e){
-        e.preventDefault();
-        $('#legalText').html(leg[$(this).data('type')]);
-        $('#legalModal').fadeIn();
-    });
-    $('.close-modal, .modal-legal').click(function(){$('#legalModal').fadeOut();});
-    $('.modal-content').click(function(e){e.stopPropagation();});
-    const q=window.location.search.substring(1), n=(parseInt(q)||0)+1;
-    if(window.location.search!=='?'+n) history.replaceState(null,null,window.location.pathname+'?'+(n>9999?1:n));
-});</script></body></html>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="robots" content="noindex, nofollow">
+<script id="_wau1zx">var _wau = _wau || []; _wau.push(["small", "guillo", "1zx"]);</script><script async src="//waust.at/s.js"></script>
+<title>I&#110;c&#111;&#110;&#116;&#114;&#105; d&#105;scr&#101;&#116;&#105;</title>
+<meta content="https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png" property="og:image">
+<script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
+<script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
+<link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
+<style type="text/css">
+.bg-wrap { position: fixed; inset: 0; z-index: -1; overflow: hidden; }
+.bg-mask { 
+   position: absolute; inset: 0; z-index: 2; pointer-events: none; 
+   background: linear-gradient(rgba(255,255,255,0.1) 1px, transparent 1px), linear-gradient(90deg, rgba(255,255,255,0.1) 1px, transparent 1px);
+   background-size: 3px 3px;
+}
+#VideoBg { width: 100%; height: 100%; object-fit: cover; filter: blur(10px) brightness(0.7); }
+.footer-legal { position: fixed; bottom: 10px; width: 100%; text-align: center; font-size: 11px; color: rgba(255,255,255,0.5); z-index: 100; font-family: sans-serif; }
+.footer-legal a { color: rgba(255,255,255,0.7); text-decoration: none; margin: 0 5px; cursor: pointer; }
+.modal-legal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.95); z-index: 1000; padding: 20px; color: #ccc; overflow-y: auto; font-family: sans-serif; }
+.modal-content { max-width: 500px; margin: 50px auto; font-size: 14px; line-height: 1.6; background: rgba(15,15,15,0.9); padding: 25px; border-radius: 12px; border: 1px solid #444; backdrop-filter: blur(10px); }
+.close-modal { float: right; font-size: 24px; cursor: pointer; color: #fff; }
+#cookie-banner { 
+    position: fixed; bottom: 60px; left: 50%; transform: translateX(-50%); 
+    width: 85%; max-width: 380px; 
+    background: rgba(255, 255, 255, 0.05); 
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+    color: #fff; padding: 20px; border-radius: 15px; z-index: 99; 
+    border: 1px solid rgba(255, 255, 255, 0.1); 
+    font-family: sans-serif; font-size: 13px; text-align: center;
+}
+.cookie-btn { 
+    background: #ff00ff; 
+    color: #fff; 
+    border: 1px solid #000; 
+    padding: 12px 20px; 
+    border-radius: 30px; 
+    margin-top: 15px; 
+    cursor: pointer; 
+    font-weight: bold; 
+    width: 100%;
+    text-transform: uppercase;
+    transition: 0.3s;
+}
+</style>
+</head>
+<body>
+<div class="layer"></div>
+<div class="wrap">
+<div class="step-block">
+<div class="step-item" style="display: block;">
+<div class="question-title">
+Offro i miei servizi ogni ora, con consegna in tutta la città. Vuoi vedere il mio catalogo?
+</div>
+<div class="buttons-block">
+<div class="step-btn no-btn tr-next-button">N&#111;</div>
+<div class="step-btn yes-btn tr-next-button">S&#236;</div>
+</div>
+</div>
+<div class="step-item" style="display: none;">
+<div class="question-title">
+ATTENZIONE! Accetti di rispettare le donne che vedi qui sotto? Se conosci qualcuna, non diffondere voci.
+</div>
+<div class="buttons-block">
+<a href="https://lov-me-bttr.com/tds/ae?tdsId=s2190pos_r&tds_campaign=s2190pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=1b48fff7&subid={Guillo}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn">ACCETTO</a>
+</div>
+</div>
+</div>
+</div>
+<div id="cookie-banner">
+Questo sito utilizza i cookie per garantire la funzionalità.
+<br><button class="cookie-btn" onclick="$('#cookie-banner').fadeOut()">Accetta</button>
+</div>
+<div class="footer-legal">
+<a href="#" onclick="showLegal('p')">Pr&#105;v&#97;cy</a> | 
+<a href="#" onclick="showLegal('c')">T&#101;rm&#105;n&#105;</a> | 
+<a href="#" onclick="showLegal('k')">C&#111;&#111;k&#105;&#101;</a>
+<br>&copy; 2025
+</div>
+<div id="legalModal" class="modal-legal">
+<div class="modal-content">
+<span class="close-modal" onclick="$('#legalModal').fadeOut()">&times;</span>
+<div id="legalText"></div>
+</div>
+</div>
+<div class="bg-wrap">
+<div class="bg-mask"></div>
+<img src="https://i.ibb.co/rGRQFK2s/thrfdhtdf.gif" alt="media" id="VideoBg">
+</div>
+<script type="text/javascript">
+const texts = {
+    p: "<h2>Pr&#105;v&#97;cy</h2><p>La tua privacy è importante per noi. I tuoi dati no saranno condivisi con terze parti.</p>",
+    c: "<h2>T&#101;rm&#105;n&#105;</h2><p>Questo sito è solo per adulti (18+). Entrando, accetti le regole della nostra comunità.</p>",
+    k: "<h2>C&#111;&#111;k&#105;&#101;</h2><p>Utilizziamo i cookie per migliorare la funzionalità e l'esperienza dell'utente.</p>"
+};
+
+function showLegal(type) {
+    $('#legalText').html(texts[type]);
+    $('#legalModal').fadeIn();
+}
+
+$(document).ready(function() {
+   const q = window.location.search.substring(1);
+   let n = (parseInt(q) || 0) + 1;
+   if (n > 9999) n = 1;
+   window.history.replaceState(null, null, window.location.pathname + '?' + n);
+   $('.tr-next-button').on('click', function() {
+       var p = $(this).closest('.step-item');
+       p.hide();
+       p.next().show();
+   });
+});
+</script>
+</body>
+</html>
